2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Revamp *_threshold functions.

	* scribo/binarization/internal/sauvola_core.hh: Remove.

	* scribo/binarization/internal/local_threshold_core.hh: New.

	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/sauvola_functor.hh,
	* scribo/binarization/internal/sauvola_threshold_functor.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/niblack_threshold.hh,
	* scribo/binarization/sauvola.hh,
	* scribo/binarization/sauvola_threshold.hh: Make use of
	local_threshold_core.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Refactor local threshold binarization algorithms.

	* scribo/binarization/internal/compute_local_threshold.hh,
	* scribo/binarization/internal/first_pass_functor.hh: Remove.

	* scribo/binarization/internal/niblack_functor.hh,
	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/sauvola_core.hh,
	* scribo/binarization/internal/sauvola_functor.hh,
	* scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/binarization/internal/sauvola_threshold_functor.hh,
	* scribo/util/compute_sub_domains.hh,
	* scribo/util/init_integral_image.hh,
	* scribo/util/integral_sub_sum_sum2_functor.hh,
	* scribo/util/integral_sum_sum2_functor.hh,
	* src/binarization/pgm_niblack_threshold_image.cc: New.

	* scribo/binarization/internal/local_threshold_debug.hh,
	* scribo/binarization/internal/niblack_formula.hh,
	* scribo/binarization/internal/sauvola_formula.hh,
	* scribo/binarization/local_threshold.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/niblack_threshold.hh,
	* scribo/binarization/sauvola.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/binarization/sauvola_threshold.hh,
	* scribo/binarization/trash/compute_local_threshold.hh,
	* scribo/canvas/integral_browsing.hh: Cleanup and make use of
	functors.

	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_debug.cc: Handle verbose/debug