@@ -1,5 +1,16 @@
 2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	Fix binarization tests.
+
+	* sauvola_fast.cc,
+	* scribo/binarization/internal/local_threshold_core.hh,
+	* tests/binarization/niblack.cc,
+	* tests/binarization/niblack.ref.pbm,
+	* tests/binarization/sauvola.cc,
+	* tests/binarization/sauvola.ref.pbm: Here.
+
+2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	Revamp *_threshold functions.
 
 	* scribo/binarization/internal/sauvola_core.hh: Remove.
